// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operation-summary-formatted return errors if summary does not end with a dot 1`] = `
Array [
  Object {
    "code": "operation-summary-formatted",
    "message": "must match the pattern '^[A-Z].*\\\\.$'",
    "path": Array [
      "paths",
      "/todos",
      "get",
      "summary",
    ],
    "range": Object {
      "end": Object {
        "character": 48,
        "line": 5,
      },
      "start": Object {
        "character": 19,
        "line": 5,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation \`summary\` should start with upper case and end with a dot.",
  },
]
`;

exports[`operation-summary-formatted return errors if summary does not start with an uppercase 1`] = `
Array [
  Object {
    "code": "operation-summary-formatted",
    "message": "must match the pattern '^[A-Z].*\\\\.$'",
    "path": Array [
      "paths",
      "/todos",
      "get",
      "summary",
    ],
    "range": Object {
      "end": Object {
        "character": 49,
        "line": 5,
      },
      "start": Object {
        "character": 19,
        "line": 5,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation \`summary\` should start with upper case and end with a dot.",
  },
]
`;
